// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Snackbar /> can render a default snackbar message 1`] = `
<span
  id="feedbackSnackbarId"
>
  <Component
    conf={
      Object {
        "action": "",
        "message": "Message body",
        "onActionClick": [Function],
        "type": "",
      }
    }
    onClose={[MockFunction]}
    show={true}
  />
</span>
`;

exports[`<Snackbar /> can render a success snackbar message 1`] = `
<span
  id="feedbackSnackbarId"
>
  <Component
    conf={
      Object {
        "action": "",
        "message": "Message body",
        "onActionClick": [Function],
        "type": "SUCCESS",
      }
    }
    onClose={[MockFunction]}
    show={true}
  />
</span>
`;

exports[`<Snackbar /> can render a warning snackbar message 1`] = `
<span
  id="feedbackSnackbarId"
>
  <Component
    conf={
      Object {
        "action": "",
        "message": "Message body",
        "onActionClick": [Function],
        "type": "WARNING",
      }
    }
    onClose={[MockFunction]}
    show={true}
  />
</span>
`;

exports[`<Snackbar /> can render an error snackbar message 1`] = `
<span
  id="feedbackSnackbarId"
>
  <Component
    conf={
      Object {
        "action": "",
        "message": "Message body",
        "onActionClick": [Function],
        "type": "ERROR",
      }
    }
    onClose={[MockFunction]}
    show={true}
  />
</span>
`;
